compiler/mesh-parser/tests/snapshots/parser_tests__send_expr_simple.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"send(pid, 42)\")"
---
SOURCE_FILE@0..13
  SEND_EXPR@0..13
    SEND_KW@0..4 "send"
    ARG_LIST@4..13
      L_PAREN@4..5 "("
      NAME_REF@5..8
        IDENT@5..8 "pid"
      COMMA@8..9 ","
      WHITESPACE@9..10 " "
      LITERAL@10..12
        INT_LITERAL@10..12 "42"
      R_PAREN@12..13 ")"
  EOF@13..13 ""
