compiler/mesh-parser/tests/snapshots/parser_tests__service_def_full.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: source_and_debug(source)
---
SOURCE_FILE@0..275
  SERVICE_DEF@0..275
    SERVICE_KW@0..7 "service"
    WHITESPACE@7..8 " "
    NAME@8..15
      IDENT@8..15 "Counter"
    WHITESPACE@15..16 " "
    DO_KW@16..18 "do"
    BLOCK@18..272
      NEWLINE@18..19 "\n"
      WHITESPACE@19..21 "  "
      FN_DEF@21..76
        FN_KW@21..23 "fn"
        WHITESPACE@23..24 " "
        NAME@24..28
          IDENT@24..28 "init"
        PARAM_LIST@28..46
          L_PAREN@28..29 "("
          PARAM@29..45
            IDENT@29..38 "start_val"
            WHITESPACE@38..39 " "
            TYPE_ANNOTATION@39..45
              COLON_COLON@39..41 "::"
              WHITESPACE@41..42 " "
              IDENT@42..45 "Int"
          R_PAREN@45..46 ")"
        WHITESPACE@46..47 " "
        TYPE_ANNOTATION@47..53
          ARROW@47..49 "->"
          WHITESPACE@49..50 " "
          IDENT@50..53 "Int"
        WHITESPACE@53..54 " "
        DO_KW@54..56 "do"
        BLOCK@56..71
          NEWLINE@56..57 "\n"
          WHITESPACE@57..61 "    "
          NAME_REF@61..70
            IDENT@61..70 "start_val"
          NEWLINE@70..71 "\n"
        WHITESPACE@71..73 "  "
        END_KW@73..76 "end"
      NEWLINE@76..77 "\n"
      NEWLINE@77..78 "\n"
      WHITESPACE@78..80 "  "
      CALL_HANDLER@80..138
        CALL_KW@80..84 "call"
        WHITESPACE@84..85 " "
        NAME@85..93
          IDENT@85..93 "GetCount"
        PARAM_LIST@93..95
          L_PAREN@93..94 "("
          R_PAREN@94..95 ")"
        WHITESPACE@95..96 " "
        TYPE_ANNOTATION@96..102
          COLON_COLON@96..98 "::"
          WHITESPACE@98..99 " "
          IDENT@99..102 "Int"
        WHITESPACE@102..103 " "
        DO_KW@103..105 "do"
        WHITESPACE@105..106 " "
        BAR@106..107 "|"
        NAME@107..112
          IDENT@107..112 "state"
        BAR@112..113 "|"
        BLOCK@113..133
          NEWLINE@113..114 "\n"
          WHITESPACE@114..118 "    "
          TUPLE_EXPR@118..132
            L_PAREN@118..119 "("
            NAME_REF@119..124
              IDENT@119..124 "state"
            COMMA@124..125 ","
            WHITESPACE@125..126 " "
            NAME_REF@126..131
              IDENT@126..131 "state"
            R_PAREN@131..132 ")"
          NEWLINE@132..133 "\n"
        WHITESPACE@133..135 "  "
        END_KW@135..138 "end"
      NEWLINE@138..139 "\n"
      NEWLINE@139..140 "\n"
      WHITESPACE@140..142 "  "
      CALL_HANDLER@142..232
        CALL_KW@142..146 "call"
        WHITESPACE@146..147 " "
        NAME@147..156
          IDENT@147..156 "Increment"
        PARAM_LIST@156..171
          L_PAREN@156..157 "("
          PARAM@157..170
            IDENT@157..163 "amount"
            WHITESPACE@163..164 " "
            TYPE_ANNOTATION@164..170
              COLON_COLON@164..166 "::"
              WHITESPACE@166..167 " "
              IDENT@167..170 "Int"
          R_PAREN@170..171 ")"
        WHITESPACE@171..172 " "
        TYPE_ANNOTATION@172..178
          COLON_COLON@172..174 "::"
          WHITESPACE@174..175 " "
          IDENT@175..178 "Int"
        WHITESPACE@178..179 " "
        DO_KW@179..181 "do"
        WHITESPACE@181..182 " "
        BAR@182..183 "|"
        NAME@183..188
          IDENT@183..188 "state"
        BAR@188..189 "|"
        BLOCK@189..227
          NEWLINE@189..190 "\n"
          WHITESPACE@190..194 "    "
          TUPLE_EXPR@194..226
            L_PAREN@194..195 "("
            BINARY_EXPR@195..209
              NAME_REF@195..200
                IDENT@195..200 "state"
              WHITESPACE@200..201 " "
              PLUS@201..202 "+"
              WHITESPACE@202..203 " "
              NAME_REF@203..209
                IDENT@203..209 "amount"
            COMMA@209..210 ","
            WHITESPACE@210..211 " "
            BINARY_EXPR@211..225
              NAME_REF@211..216
                IDENT@211..216 "state"
              WHITESPACE@216..217 " "
              PLUS@217..218 "+"
              WHITESPACE@218..219 " "
              NAME_REF@219..225
                IDENT@219..225 "amount"
            R_PAREN@225..226 ")"
          NEWLINE@226..227 "\n"
        WHITESPACE@227..229 "  "
        END_KW@229..232 "end"
      NEWLINE@232..233 "\n"
      NEWLINE@233..234 "\n"
      WHITESPACE@234..236 "  "
      CAST_HANDLER@236..271
        CAST_KW@236..240 "cast"
        WHITESPACE@240..241 " "
        NAME@241..246
          IDENT@241..246 "Reset"
        PARAM_LIST@246..248
          L_PAREN@246..247 "("
          R_PAREN@247..248 ")"
        WHITESPACE@248..249 " "
        DO_KW@249..251 "do"
        WHITESPACE@251..252 " "
        BAR@252..253 "|"
        NAME@253..258
          IDENT@253..258 "state"
        BAR@258..259 "|"
        BLOCK@259..266
          NEWLINE@259..260 "\n"
          WHITESPACE@260..264 "    "
          LITERAL@264..265
            INT_LITERAL@264..265 "0"
          NEWLINE@265..266 "\n"
        WHITESPACE@266..268 "  "
        END_KW@268..271 "end"
      NEWLINE@271..272 "\n"
    END_KW@272..275 "end"
  EOF@275..275 ""
