compiler/mesh-parser/tests/snapshots/parser_tests__service_def_with_cast_handler.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "source_and_debug(\"service Counter do\\n  cast Reset() do |state|\\n    0\\n  end\\nend\")"
---
SOURCE_FILE@0..60
  SERVICE_DEF@0..60
    SERVICE_KW@0..7 "service"
    WHITESPACE@7..8 " "
    NAME@8..15
      IDENT@8..15 "Counter"
    WHITESPACE@15..16 " "
    DO_KW@16..18 "do"
    BLOCK@18..57
      NEWLINE@18..19 "\n"
      WHITESPACE@19..21 "  "
      CAST_HANDLER@21..56
        CAST_KW@21..25 "cast"
        WHITESPACE@25..26 " "
        NAME@26..31
          IDENT@26..31 "Reset"
        PARAM_LIST@31..33
          L_PAREN@31..32 "("
          R_PAREN@32..33 ")"
        WHITESPACE@33..34 " "
        DO_KW@34..36 "do"
        WHITESPACE@36..37 " "
        BAR@37..38 "|"
        NAME@38..43
          IDENT@38..43 "state"
        BAR@43..44 "|"
        BLOCK@44..51
          NEWLINE@44..45 "\n"
          WHITESPACE@45..49 "    "
          LITERAL@49..50
            INT_LITERAL@49..50 "0"
          NEWLINE@50..51 "\n"
        WHITESPACE@51..53 "  "
        END_KW@53..56 "end"
      NEWLINE@56..57 "\n"
    END_KW@57..60 "end"
  EOF@60..60 ""
