compiler/mesh-parser/tests/snapshots/parser_tests__slot_pipe_multiline_trailing.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"x |2>\\n  foo(1)\")"
---
SOURCE_FILE@0..14
  SLOT_PIPE_EXPR@0..14
    NAME_REF@0..1
      IDENT@0..1 "x"
    WHITESPACE@1..2 " "
    SLOT_PIPE@2..5 "|2>"
    NEWLINE@5..6 "\n"
    WHITESPACE@6..8 "  "
    CALL_EXPR@8..14
      NAME_REF@8..11
        IDENT@8..11 "foo"
      ARG_LIST@11..14
        L_PAREN@11..12 "("
        LITERAL@12..13
          INT_LITERAL@12..13 "1"
        R_PAREN@13..14 ")"
  EOF@14..14 ""
