compiler/mesh-parser/tests/snapshots/parser_tests__spawn_expr_no_args.snap
---
source: crates/mesh-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"spawn(worker)\")"
---
SOURCE_FILE@0..13
  SPAWN_EXPR@0..13
    SPAWN_KW@0..5 "spawn"
    ARG_LIST@5..13
      L_PAREN@5..6 "("
      NAME_REF@6..12
        IDENT@6..12 "worker"
      R_PAREN@12..13 ")"
  EOF@13..13 ""
