compiler/mesh-parser/tests/snapshots/parser_tests__spawn_expr_simple.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"spawn(counter, 0)\")"
---
SOURCE_FILE@0..17
  SPAWN_EXPR@0..17
    SPAWN_KW@0..5 "spawn"
    ARG_LIST@5..17
      L_PAREN@5..6 "("
      NAME_REF@6..13
        IDENT@6..13 "counter"
      COMMA@13..14 ","
      WHITESPACE@14..15 " "
      LITERAL@15..16
        INT_LITERAL@15..16 "0"
      R_PAREN@16..17 ")"
  EOF@17..17 ""
