compiler/mesh-parser/tests/snapshots/parser_tests__string_interpolation.snap
---
source: crates/mesh-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"\\\"hello ${name} world\\\"\")"
---
SOURCE_FILE@0..21
  STRING_EXPR@0..21
    STRING_START@0..1 "\""
    STRING_CONTENT@1..7 "hello "
    INTERPOLATION@7..14
      INTERPOLATION_START@7..9 "${"
      NAME_REF@9..13
        IDENT@9..13 "name"
      INTERPOLATION_END@13..14 "}"
    STRING_CONTENT@14..20 " world"
    STRING_END@20..21 "\""
  EOF@21..21 ""
