compiler/mesh-parser/tests/snapshots/parser_tests__struct_deriving_clause_snapshot.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: source_and_debug(source)
---
SOURCE_FILE@0..52
  STRUCT_DEF@0..52
    STRUCT_KW@0..6 "struct"
    WHITESPACE@6..7 " "
    NAME@7..12
      IDENT@7..12 "Point"
    WHITESPACE@12..13 " "
    DO_KW@13..15 "do"
    NEWLINE@15..16 "\n"
    WHITESPACE@16..18 "  "
    STRUCT_FIELD@18..26
      NAME@18..19
        IDENT@18..19 "x"
      WHITESPACE@19..20 " "
      TYPE_ANNOTATION@20..26
        COLON_COLON@20..22 "::"
        WHITESPACE@22..23 " "
        IDENT@23..26 "Int"
    NEWLINE@26..27 "\n"
    END_KW@27..30 "end"
    WHITESPACE@30..31 " "
    DERIVING_CLAUSE@31..52
      IDENT@31..39 "deriving"
      L_PAREN@39..40 "("
      IDENT@40..42 "Eq"
      COMMA@42..43 ","
      WHITESPACE@43..44 " "
      IDENT@44..51 "Display"
      R_PAREN@51..52 ")"
  EOF@52..52 ""
